feat(seo): mention no appointment required

--- a/packages/site/src/components/organisms/Prices.astro
+++ b/packages/site/src/components/organisms/Prices.astro
@@ -11,7 +11,7 @@ const [_categoryName, prices] = categories.introPrices;
      Nos tarifs
     </h2>
   </Fragment>
-  <div class="text-xs text-center px-8  text-primary dark:text-secondary">
+  <div class="text-xs text-center px-8 text-offset">
   <p >Chez SC Coiffure,  nous créons des coupes sur mesure selon vos préférences de longueur. </p>
    <p class="mt-2">
     Optez pour le court, le mi-long, ou le long, et découvrez la coupe parfaite qui reflète votre style unique dans nos tarifs</p>
