--- a/packages/site/src/components/organisms/Intro.astro
+++ b/packages/site/src/components/organisms/Intro.astro
@@ -2,8 +2,6 @@
 import { Icon } from 'astro-icon';
 import ContentSection from '~/components/molecules/ContentSection.astro';
 import { companyName } from '~/constants/seo';
-import Price from '../atoms/Price.svelte';
-
 type CTAElement = {
   label: string;
   href: string;
@@ -49,16 +47,31 @@ const ctas: CTAElement[] = [
   </Fragment>
 
   <Icon slot="eyebrow" name="logomark" class="text-default h-48" />
-  <div class="container">
-    <div class="flex flex-col items-center gap-4">
-      <p class="text-text max-w-xl text-center text-sm">
+  <div class="container flex items-center justify-center">
+    <div class="text-text flex max-w-xl flex-col gap-4 text-center text-sm">
+      <p>
         Adoptez la <span class="text-accent">SC attitude</span> pour sublimer votre
         style ! Séverine et Cécile vous accueillent <span class="text-accent"
           >chaleureusement</span
-        > dans leur salon de coiffure, situé sur le port de
-        <span class="text-accent">La Seyne-sur-Mer</span>, alliant <span
-          class="text-accent">expertise</span
-        > et <span class="text-accent">convivialité</span>.
+        >
+        dans leur salon de coiffure, situé sur le port de <span
+          class="text-accent">La Seyne-sur-Mer</span
+        >, alliant <span class="text-accent">expertise</span> et <span
+          class="text-accent">convivialité</span
+        >.
+      </p>
+
+      <p>
+        Que ce soit <span class="text-accent">avec ou sans rendez-vous</span>,
+        découvrez notre savoir-faire.
+      </p>
+
+      <p>
+        Explorez nos services de <span class="text-accent">coiffure</span> ainsi
+        que nos prestations de <span class="text-accent">coloration</span>, <span
+          class="text-accent">balayage</span
+        >
+        et <span class="text-accent">mise en beauté</span>.
       </p>
     </div>
   </div>
