feat(seo): shorter site name

--- a/packages/site/src/components/organisms/layout/Layout.astro
+++ b/packages/site/src/components/organisms/layout/Layout.astro
@@ -41,7 +41,7 @@ const schema = JSON.stringify(seo.schema({ image, canonical }), null, 2);
 
     <!-- social media -->
     <meta property="article:publisher" content={social.facebook} />
-    <meta property="og:site_name" content={seo.title} />
+    <meta property="og:site_name" content={seo.siteName} />
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:title" content={title} />
     <meta property="og:type" content="website" />
