--- a/packages/site/src/components/organisms/Footer.astro
+++ b/packages/site/src/components/organisms/Footer.astro
@@ -9,7 +9,7 @@ const links: Array<FooterLink> = [
   {
     url: social.instagram,
     description: 'Instagram',
-    icon: 'uil:instagram-alt',
+    icon: 'mdi:instagram',
   },
   {
     url: social.facebook,
@@ -28,7 +28,7 @@ const links: Array<FooterLink> = [
   },
 ];
 
-const currentYear = new Date().getFullYear()
+const currentYear = new Date().getFullYear();
 ---
 
 <footer
