--- a/packages/site/src/components/atoms/ThemeSwitcher.astro
+++ b/packages/site/src/components/atoms/ThemeSwitcher.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon/components';
 ---
 
 <button
@@ -8,11 +8,11 @@ import { Icon } from 'astro-icon';
   class="origin-[right_center] transition-all duration-500"
 >
   <div id="icon-theme-light">
-    <Icon name="theme/light" class="h-8" />
+    <Icon name="mdi:white-balance-sunny" class="size-6" />
     <span class="sr-only">Thème clair</span>
   </div>
   <div id="icon-theme-dark" class="hidden">
-    <Icon name="theme/dark" class="h-8" />
+    <Icon name="mdi:weather-night" class="size-6" />
     <span class="sr-only">Thème foncé</span>
   </div>
 </button>
