--- a/packages/site/src/components/organisms/Splash.astro
+++ b/packages/site/src/components/organisms/Splash.astro
@@ -14,7 +14,9 @@ import FindUs from '~/components/molecules/FindUs.svelte';
     class="relative flex h-full flex-col items-center justify-between gap-8 sm:justify-center sm:gap-32"
   >
     <div class="flex flex-col gap-2 sm:gap-4 sm:self-auto sm:justify-self-end">
-      <h1 class="text-center font-thin tracking-tighter text-gray-50 text-6xl">
+      <h1
+        class="text-center text-6xl font-extralight tracking-tighter text-gray-50"
+      >
         Bienvenue chez <br />
         <span class="text-6xl">SC Coiffure</span>
       </h1>
