--- a/packages/site/resources/views/inertia_layout.edge
+++ b/packages/site/resources/views/inertia_layout.edge
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title inertia>AdonisJS x Inertia x VueJS</title>
+   <link rel="shortcut icon" href="{{ asset('resources/assets/favicon.ico') }}" type="image/x-icon"></link>
+  <title inertia></title>
 
   @vite(['inertia/app/app.ts', `inertia/pages/${page.component}.vue`])
   @inertiaHead()
