--- a/packages/site/inertia/css/globals.css
+++ b/packages/site/inertia/css/globals.css
@@ -1,33 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   :root {
-    --font-heading: 'DM Sans';
-    --font-body: 'Space Mono';
-    --background: 26 56% 80%;
-    --foreground: 12 34% 26%;
-    --primary: 36 45% 70%;
-    --primary-foreground: 36 45% 11%;
-    --secondary: 40 35% 77%;
-    --secondary-foreground: 36 45% 25%;
-    --accent: 36 64% 57%;
-    --accent-foreground: 36 72% 17%;
-    --destructive: 0 84% 37%;
-    --destructive-foreground: 0 0% 98%;
-    --muted: 36 33% 75%;
-    --muted-foreground: 36 45% 25%;
-    --card: 36 46% 82%;
-    --card-foreground: 36 45% 20%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --border: 36 45% 60%;
-    --input: 36 45% 60%;
-    --ring: 36 45% 30%;
-    --radius: 0rem;
+    --font-heading: 'Manrope';
+    --font-body: 'Manrope';
+    --background: 60 5% 94%;
+    --foreground: 240 5% 10%;
+    --primary: 240 0% 10%;
+    --primary-foreground: 60 0% 100%;
+    --secondary: 240 4% 85%;
+    --secondary-foreground: 30 40% 75%;
+    --accent: 240 0% 87%;
+    --accent-foreground: 26 56% 81%;
+    --destructive: 0 60% 50%;
+    --destructive-foreground: 0 0% 2%;
+    --muted: 270 2% 25%;
+    --muted-foreground: 60 5% 94%;
+    --card: 240 4% 90%;
+    --card-foreground: 60 5% 10%;
+    --popover: 240 5% 85%;
+    --popover-foreground: 60 5% 15%;
+    --border: 26 56% 80%;
+    --input: 26 56% 80%;
+    --ring: 26 56% 80%;
+    --radius: 0.5rem;
   }
 }
 
